--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="w-layout-grid skills-grid">
         <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd8a-621ff995" class="skillset-wrap">
-          <p class="paragraph-light port">Är i första hand utbildad inom IT-Support. Men har under senaste åren utbildat mig (på egen hand) inom webbutveckling och frontend utveckling. Min starkaste gren är Wordpress men har även börjat kika lite på React.js NextJs Shopify och Builder.io</p>
+          <p class="paragraph-light port">Är i första hand utbildad inom IT-Support men har under senaste åren utbildat mig (på egen hand) inom webbutveckling och frontend utveckling. Min starkaste gren är Wordpress men har även börjat kika lite på React.js NextJs Shopify och Builder.io</p>
         </div>
         <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd8f-621ff995" class="w-layout-grid services-items-grid">
           <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd90-621ff995">
